modify groovycloud.properties to oceanus.properties